option('documentation', type: 'boolean', value: false, description: 'generate documentation with valadoc')
option('build-tests', type: 'boolean', value: false, description: 'build unit tests')
option('demos', type: 'boolean', value: false, description: 'build demo applications')
option('introspection', type: 'boolean', value: true, description: 'Whether to build introspection files')